# nates-recipe-rs

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  docs.ogdl  kernel_inventory.db  linreg_gd_penguins.rb  model.ogdl  train.rs
.claude/: settings.local.json
.claude/skills/: taxonomy.md
catboost-rs/: Cargo.toml
catboost-rs/src/: lib.rs
datasets/VNA/: 9_10_24_Hold_02_targets.csv  Predictors_2025-04-15_10-43_Hold-2.csv  sample_predictors.csv  sample_targets.csv
datasets/adidas-2026/: Adidas_Global.csv  BR_Adidas.csv  CN_Adidas.csv  DE_Adidas.csv  FR_Adidas.csv  GB_Adidas.csv  IN_Adidas.csv  JP_Adidas.csv  KR_Adidas.csv  MX_Adidas.csv  US_Adidas.csv
datasets/amazon-fashion/: products.csv
datasets/cosmetics/: makeup_data.json  output.csv
datasets/furniture/: competitors_raw_data.csv
datasets/hm-products/: handm.csv
datasets/kaggle-survey-2018/: SurveySchema.csv  freeFormResponses.csv  multipleChoiceResponses.csv
datasets/lendingclub-2007-2011/: Data_Dictionary.xlsx
datasets/march-machine-learning-mania-2026/: MMasseyOrdinals.csv
datasets/newchic/: accessories.csv  bags.csv  beauty.csv  house.csv  jewelry.csv  kids.csv  men.csv  shoes.csv  women.csv
datasets/playground-series-s6e3/: sample_submission.csv  test.csv  train.csv
datasets/predict-the-handwriting-images/: sample_sub.csv  test.csv  train.csv
datasets/sandp500/: getSandP.py  merge.sh
datasets/survey-2017/: RespondentTypeREADME.txt  conversionRates.csv  freeformResponses.csv  multipleChoiceResponses.csv  schema.csv
datasets/uci-ecoli/: ecoli.data
datasets/uci-magic/: magic04.data
datasets/uci-satimage/: sat.trn
datasets/uci-spambase/: spambase.data
datasets/uci-yeast/: yeast.data
datasets/web-traffic-time-series-forecasting/: key_2.csv  sample_submission_2.csv  train_2.csv
docs/: nates_gpu.lua.ogdl  nates_gpu.ruby.ogdl  nates_gpu.rust.ogdl
examples/: cookbook.rs  det_probe.rs  e2e_churn.rs  e2e_image.rs  e2e_llm.rs  e2e_runforms.rs  gemma4.rs  gpu_probe.rs  profile_churn.rs  train_detector.rs
gpu-core/: Cargo.toml  README.md  build.rs
gpu-core/src/: attention.rs  bayes.rs  callspy.rs  catboost.rs  cluster.rs  diffusion.rs  encoding.rs  forest.rs  graph.rs  hip.rs  infer_ops.rs  k_actx.rs  k_gapact.rs  k_mathx.rs  kernels.rs  lib.rs  linalg.rs  losses.rs  math_ops.rs  memory.rs  moe.rs  nn_f32.rs  optimizers.rs  reductions.rs  rl.rs  rope.rs  sequence.rs  shim_nvidia.cu  svm.rs  tiered.rs  waterfall.rs
gpu-core/tests/: _gpu_live.rs  all.rs  inventory_proof.rs  parity_blas_l2.rs  parity_blas_l3.rs  parity_solver_fft.rs  prove_activation.rs  prove_conv.rs  prove_creation.rs  prove_distance.rs  prove_elementwise_binary.rs  prove_elementwise_unary.rs  prove_embedding.rs  prove_foreach.rs  prove_histogram.rs  prove_indexing.rs  prove_loss.rs  prove_norm.rs  prove_optimizer.rs  prove_padding.rs  prove_pool.rs  prove_quantized.rs  prove_reduction.rs  prove_scan.rs  prove_search.rs  prove_set.rs  prove_shape.rs  prove_sort.rs  prove_special.rs  t_algos.rs  t_bmm.rs  t_lead_smoke.rs  t_linalg_reduce.rs  t_math_enc_loss.rs  t_ml.rs  t_nn.rs  t_smo_verify.rs
kaggle_s6e4/: bench_all.rb  bench_oblivious.rb  prep_bench_data.rb  solve_v2.rb
kaggle_s6e4/cache/: gpu-gbm__1_f1.json  gpu-gbm__1_f1_02d29c4b.json  gpu-gbm__1_f1_5ad402ef.json  lightgbm__1_f1_259869a6.json  nn_feat_sel_f1_resnet__1_ae45a6e8.json  resnet__1_f1_0e32ebf2.json  resnet__1_f1_22d3b093.json  xgboost__1_f1_9ca6474d.json
kaggle_s6e4/lib/: split.rb
lightgbm-rs/: Cargo.toml
lightgbm-rs/src/: bench.rs  lib.rs
models/: test_ridge.lua  vna2_all_models_sampler.rb
nates-gpu-lua/: Cargo.toml
nates-gpu-lua/src/: lib.rs
nates-gpu-ruby/: Cargo.toml
nates-gpu-ruby/sig/: nates_gpu.rbs
nates-gpu-ruby/src/: lib.rs
ogdl/: Cargo.toml
ogdl/src/: lib.rs
pantry/: Cargo.toml  build.rs
pantry/src/: bpe.rs  data.rs  detect.rs  encode.rs  lib.rs  main.rs
recipe-infer/: Cargo.toml
recipe-infer/src/: enums.rs  forward.rs  lib.rs  ogdl.rs  params.rs  safetensors.rs  scratch.rs
src/: lib.rs  lua_runtime.rs  main.rs
src/utils/: data.rs  dataset.rs  detect.rs  (+4 more)
tests/: fixture.csv
vramspy/: Cargo.toml
xgboost-rs/: Cargo.toml
xgboost-rs/src/: bench.rs  lib.rs
(+96 files in other folders)
