[package]
name = "nates-recipe"
version = "0.1.0"
edition = "2024"

[lib]
name = "nates_recipe"

[workspace]
members = ["."]
exclude = ["catboost-rs", "xgboost-rs", "lightgbm-rs"]

[dependencies]
gpu-core = { path = "gpu-core" }
anyhow = "1"
csv = "1"
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-stats = "0.6"
rayon = "1"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
image = "0.25"
ratatui = "0.30"
libc = "0.2"
indicatif = { version = "0.17", features = ["rayon"] }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
debug = false
