[workspace]

[package]
name = "nates-gpu-lua"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "nates_gpu"

[dependencies]
gpu-core = { path = "../gpu-core" }
mlua = { version = "0.11", features = ["lua55", "module"] }
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
catboost-rs = { path = "../catboost-rs" }
